# orchflow

./: .gitignore  BUNDLE_OPTIMIZATION_SUMMARY.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_ROADMAP_old.md  DUPLICATE_DIRECTORIES_ANALYSIS.md  ERROR_HANDLING_REVIEW.md  LICENSE-APACHE  LICENSE-MIT  MANAGER_ORCHESTRATOR_INTEGRATION_ROADMAP.md  MIGRATION_GUIDE.md  NOTICE  OPTIMIZATION_COMPLETE.md  ORCHFLOW_IMPLEMENTATION_COMPLETE.md  PHASE_1_COMPLETION_REPORT.md  README.md  ROADMAP_ANALYSIS_REPORT.md  RUST_CRATES_GUIDE.md  TESTING_SUMMARY.md  TEST_REPORT.md  TYPESCRIPT_FIXES_SUMMARY.md  UNUSED_CODE_ANALYSIS.md  UPGRADE_TESTING_PLAN.md  UX_COMPONENTS_INTEGRATION.md  cfreadme.md  init.lua  metrics_orchflow_improvement.md  optimize-build.sh  package-lock.json  package.json  package.json.testing  rename-frontend-to-desktop.sh  setup-desktop.sh  setup-frontend.sh  setup_claude_privacy.sh  setup_commit_hook.sh  start-gui.sh  test-desktop.sh  (+7 more)
crates/orchflow-core/: CHANGELOG.md  Cargo.toml  README.md
crates/orchflow-core/examples/: basic_usage.rs
crates/orchflow-core/src/: backend.rs  error.rs  lib.rs  storage.rs  tests.rs
crates/orchflow-core/src/manager/: actions.rs  events.rs  execution.rs  mod.rs  plugins.rs
crates/orchflow-core/src/state/: mod.rs  types.rs
crates/orchflow-mux/: CHANGELOG.md  Cargo.toml  README.md
crates/orchflow-mux/src/: MOCK_BACKEND_GUIDE.md  backend.rs  benchmarks.rs  factory.rs  integration_tests.rs  lib.rs  mock_backend.rs  mock_tests.rs  muxd_backend.rs  tests.rs  tmux_backend.rs  tmux_integration_tests.rs
crates/orchflow-terminal/: CHANGELOG.md  Cargo.toml  README.md
crates/orchflow-terminal/src/: buffer.rs  channel.rs  error.rs  ipc_trait.rs  lib.rs  protocol.rs  pty_manager.rs  state.rs  tests.rs
demos/ai-orchestrator/: Cargo.toml  ORCHFLOW_CODING_STANDARDS.md  ORCHFLOW_DISTRIBUTION_FINAL.md  ORCHFLOW_FEASIBILITY_REPORT.md  ORCHFLOW_PROJECT_PHASES.md  ORCHFLOW_TERMINAL_ARCHITECTURE.md  ORCHFLOW_TERMINAL_SETUP.md  README.md  TECHNICAL_IMPLEMENTATION_GUIDE.md  VISIBILITY_DESIGN.md  WORKER_TERMINAL_ACCESS_GUIDE.md  claude-monitor.js  quickstart.sh  reminder.md  run-demo.sh
demos/ai-orchestrator/archive/: ARCHITECTURE.md  CLAUDE_FLOW_TECHNIQUE.md  COMPLETE_ARCHITECTURE.md  FINAL_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MINIMAL_WORKING_DEMO.md  ORCHFLOW_DEMO.md  ORCHFLOW_INTEGRATION.md  QUICK_START.md  README.md  REALISTIC_IMPLEMENTATION.md  REQUIREMENTS_VERIFICATION.md  REVISED_ARCHITECTURE.md  SIMPLE_DEMO.md  SIMPLIFIED_ARCHITECTURE.md
demos/ai-orchestrator/archive/early-planning/: EXTENDING.md  FUTURE_WORK.md  HIVE_MIND_RECOMMENDATIONS.md  ORCHFLOW_TERMINAL_SUMMARY.md  TECHNICAL_DETAILS.md  TMUX_ARCHITECTURE.md
demos/ai-orchestrator/archive/outdated-architecture/: ORCHFLOW_DISTRIBUTION_STRATEGY.md
demos/ai-orchestrator/src/: lib.rs  orchestrator.rs
desktop/src-tauri/: CORE_MANAGER_API.md  Cargo.toml  bench.sh  build.rs  orchflow.db  run_test_coverage.sh  tauri.conf.json  test_git_functionality.sh
desktop/src-tauri/.sqlx/: query-0db31590e9021f4a5784ec4178a389eb326973643cdfa2a3ceb8d20b07d54ed3.json  query-48cf11939e2dee81aace1e829523b038e8ba55450d0ce85212c468d37617ba21.json  query-4a40fcc99961a222e219c3edda9773c1f5ebe0bd274658f41c7c8b0d773ccab2.json  query-6050e21595899f03d87405c96c2358a2149da3042d51b65d7c8d658b0fcdf434.json  query-84f190ddadded5884a98176906352aab187e6a43c32b00cce6a849438d83c3a0.json  query-bc420b636ce64e60c9984f9521a6b756f7d51f948cfe24abd7bea287b49d1a44.json  query-c28fe974cfd34e81fdae53b231f03e2921377cc79cfdf06634bb12436628121a.json  query-fbe9b37b7b602f25776ef29bb271ec1fb0afc0dd63073b9d6a322a20a02e3057.json
desktop/src-tauri/.swarm/: memory.db  memory.db-shm  memory.db-wal
desktop/src-tauri/benches/: orchestrator_bench.rs
desktop/src-tauri/migrations/: 001_initial_schema.sql  002_test_results.sql
desktop/src-tauri/scripts/: test-coverage.sh
desktop/src-tauri/src/: app_dirs.rs  backend_commands.rs  command_history.rs  command_history_commands.rs  command_history_tests.rs  core_manager_commands.rs  error_handling_tests.rs  error_tests.rs  file_commands.rs  file_manager_git_test.rs  file_manager_tests.rs  file_watcher.rs  file_watcher_commands.rs  git_commands.rs  git_commands_complete.rs  git_commands_test.rs  integration_tests.rs  layout.rs  layout_commands.rs  layout_tests.rs  lib.rs  main.rs  metrics.rs  module_commands.rs  module_commands_tests.rs  modules.rs  neovim.rs  neovim_tests.rs  performance_tests.rs  plugin_event_tests.rs  project_search.rs  project_search_tests.rs  search_commands.rs  sharing_service.rs  startup.rs  state_manager_tests.rs  state_manager_tests_v2.rs  terminal_commands.rs  terminal_search.rs  terminal_search_tests.rs  (+13 more)
desktop/src-tauri/src/error/: backend.rs  config.rs  context.rs  database.rs  filesystem.rs  layout.rs  mod.rs  network.rs  plugin.rs  state.rs  system.rs  terminal.rs  validation.rs
desktop/src-tauri/src/experimental/: mod.rs
desktop/src-tauri/src/file_manager/: git.rs  history.rs  mod.rs  operations.rs  tests.rs  trash.rs  tree.rs  types.rs  utils.rs
desktop/src-tauri/src/manager/: actions.rs  commands.rs  events.rs  execution.rs  mod.rs  plugins.rs
desktop/src-tauri/src/mux_backend/: ERROR_HANDLING_GUIDE.md  backend.rs  benchmarks.rs  factory.rs  integration_tests.rs  mock_backend.rs  mock_tests.rs  mod.rs  (+4 more)
desktop/src-tauri/tests/: integration_tests.rs  mux_backend_test.rs  performance_benchmarks.rs
muxd/: Cargo.toml  IMPLEMENTATION_STATUS.md  TEST_FIX_SUMMARY.md
muxd/src/: daemon.rs  error.rs  lib.rs  main.rs
muxd/src/client/: mod.rs
muxd/src/protocol/: cursor_api.rs  enhanced_types.rs  mod.rs  notification.rs  request.rs  response.rs  types.rs
muxd/src/server/: cursor_handler.rs  handler.rs  mod.rs  websocket.rs
muxd/src/session/: manager.rs  manager_test.rs  metadata.rs  metadata_manager.rs  mod.rs  recovery.rs  templates.rs
muxd/src/state/: mod.rs  persistence.rs
muxd/src/terminal/: cursor.rs  mod.rs  pane.rs  pane_cursor_methods.rs  pane_test.rs  pty.rs  pty_test.rs
muxd/tests/: integration_test.rs
(+1023 files in other folders)
