[workspace]
members = [
    "crates/*",
]
resolver = "2"

# Shared dependencies across all crates
[workspace.dependencies]
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
anyhow = "1.0"

# For terminal handling
portable-pty = "0.8"
bytes = "1.8"

# For the demo app
tauri = { version = "2.1", features = ["api-all"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true