[package]
name = "muxd"
version = "0.1.0"
edition = "2021"
authors = ["OrchFlow Team"]
description = "High-performance terminal multiplexer daemon for orchflow"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Terminal handling
portable-pty = "0.8"
bytes = "1.5"

# IPC and networking
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Configuration
config = "0.13"
directories = "5.0"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
shellexpand = "3.1"

# Optional: Unix socket support
[target.'cfg(unix)'.dependencies]
tokio = { version = "1.35", features = ["net"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
