[package]
name = "orchflow-ai-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
orchflow-core = { path = "../../crates/orchflow-core" }
orchflow-mux = { path = "../../crates/orchflow-mux" }
orchflow-terminal = { path = "../../crates/orchflow-terminal" }
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "orchflow-orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "orchflow-ai-demo"
path = "src/bin/main.rs"

[lib]
name = "orchflow_ai_demo"
path = "src/lib.rs"