[package]
name = "orchflow"
version = "0.1.0"
description = "A VS Code-style developer environment with AI orchestration"
authors = ["OrchFlow Team"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"

[lib]
name = "orchflow"
path = "src/lib.rs"

[[bin]]
name = "orchflow"
path = "src/main.rs"

[[bin]]
name = "perf_test" 
path = "src/bin/perf_test.rs"

[[bin]]
name = "startup_test"
path = "src/bin/startup_test.rs"

[[bin]]
name = "memory_test"
path = "src/bin/memory_test.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-exists", "fs-remove-file", "fs-read-file", "fs-read-dir", "fs-remove-dir", "fs-create-dir", "fs-write-file",
    "shell-open", 
    "shell-execute", 
    "shell-sidecar",
    "process-all",
    "path-all",
    "os-all",
    "window-all",
    "updater"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = { version = "0.30", features = ["bundled", "serde_json", "chrono", "uuid"] }
home = "0.5"
dirs = "5.0"
futures = "0.3"
async-trait = "0.1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["multipart", "json"] }
whoami = "1.4"
regex = "1.10"
sysinfo = "0.30"
which = "6.0"
portable-pty = "0.8"
bytes = "1.5"
crossbeam-channel = "0.5"
base64 = "0.21"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"

# Database for test results and advanced features
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# LSP Support
tower-lsp = "0.20"
lsp-types = "0.95"

# Syntax Highlighting
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-json = "0.21"

# Debug Adapter Protocol
dap = { version = "0.4.1-alpha1" }

# File Watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Search (from ripgrep)
ignore = "0.4"
grep = "0.3"
num_cpus = "1.16"

# Trash functionality
trash = "3.3"

# Git integration
git2 = "0.18"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"

# Plugin System
wasmtime = "25.0"
deno_core = "0.311"

# Diagnostics
codespan-reporting = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Feature flag for development - allows dead code during development
dev-unused = []

# Optimize for size in release builds
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen units to improve optimization
panic = "abort"     # Abort on panic instead of unwinding
strip = true        # Strip symbols from binary

# Optimize dependencies too
[profile.release.package."*"]
opt-level = "z"
strip = true

[[bench]]
name = "orchestrator_bench"
harness = false
